The GC log settings actually belong in ServerSettings.